tests/specs/ecosystem/taisan11/honocord/0_1_0.test
taisan11/honocord/0.1.0
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/script/deleteSlashCommand.ts:35:23
   | 
35 | export async function deleteSlashCommand(id: string,guildId: string) {
   |                       ^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/script/createSlashCommand.ts:46:23
   | 
46 | export async function createSlashCommand(name: string, description: string,guildId: string) {
   |                       ^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
 --> /src/middlewear/verifyDiscordInteraction.ts:5:14
  | 
5 | export const verifyDiscordInteraction = createMiddleware(async (c, next) => {
  |              ^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


